doc utente terminato

--- a/web/skins/theme/dtml/it/header.html
+++ b/web/skins/theme/dtml/it/header.html
@@ -46,7 +46,7 @@
 <div id="title-wrapper">
     <h1>
         <div class="title-dec-left"></div>
-        <a href="index.html">Nice Hotel <span>A HTML Template</span></a>
+        <a href="index.html"><img src="\skins\theme\img\logo.gif"></a>
         <div class="title-dec-right">test</div></h1>
     <!-- END .title-wrapper -->
 </div>
