mappaSito, correzione pianoQualita, gabbiaLogica iniziata gitignore modificata

--- a/web/skins/theme/dtml/it/header.html
+++ b/web/skins/theme/dtml/it/header.html
@@ -45,8 +45,8 @@
 <!-- BEGIN .title-wrapper -->
 <div id="title-wrapper">
     <h1>
-        <div class="title-dec-left"></div>
-        <a href="index.html"><img src="\skins\theme\img\logo.gif"></a>
-        <div class="title-dec-right">test</div></h1>
+        <div class="title-dec-left" style="display: none"></div>
+        <a href="index.html"><img src="\skins\theme\img\logo.png"></a>
+        <div class="title-dec-right" style="display: none">test</div></h1>
     <!-- END .title-wrapper -->
 </div>
