--- a/web/progettazione/gabbiaLogica.html
+++ b/web/progettazione/gabbiaLogica.html
@@ -2,17 +2,76 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
-
+    <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
     <title>B&B La Vecchia Posta | Gabbia Logica</title>
 </head>
 <body>
-    <div id="socialBar">socialBar</div>
-    <div id="header">header</div>
-    <div id="menuBar">menuBar</div>
-    <div id="slider">slider</div>
+<div id="wrapper-content">
+    <div id="socialBar">
+
+        <div id="left-social-bar"><span class="logo-social">a</span>
+            <span class="logo-social">b</span>
+            <span class="logo-social">c</span>
+            <span class="logo-social">d</span>
+            <span class="logo-social">e</span>
+        </div>
+        <span id="marker-map">marker</span>
+        <div id="right-social-bar">
+            <span id="btn-prenota">prenota</span>
+            <span id="upperText">A</span>
+            <span id="normaleText">Aa</span>
+            <span id="lowerText">a</span>
+        </div>
+    </div>
+    <div id="header">
+        <div id="logo">LOGO</div>
+        <div id="offerta">
+            <span id="titolo-offerta">
+                Titolo offerta
+            </span>
+            <span id="testo-offerta">
+                testo dell'offerta caratteri limitati
+            </span>
+        </div>
+    </div>
+    <div id="menuBar">
+        <div><ul id="main">
+            <li>home</li>
+            <li>camere</li>
+            <li>attività</li>
+            <li>eventi</li>
+            <li>dintorni</li>
+            <li>dove siamo</li>
+        </ul>
+        <ul id="contact">
+            <li>contatti veloci</li>
+            <li>telono ed email</li>
+        </ul></div>
+    </div>
+    <div id="wrapper-slider">
+        <div id="slider">qui le foto</div>
+        <div id="booknow">scorciatoia per la prenotazione</div>
+    </div>
     <div id="slogan">slogan</div>
-    <div id="threeColumns">threeColumns</div>
-    <div id="twoColumns">twoColumns</div>
-    <div id="footer">footer</div>
+    <hr />
+    <div id="threeColumns">
+        <div>prima colonna</div>
+        <div>seconda colonna</div>
+        <div style="border: none">terza colonna</div>
+    </div>
+    <hr />
+    <div id="twoColumns">
+        <div>prima colonna</div>
+        <div style="border: none">seconda colonna</div>
+    </div>
+    <div id="footer">
+        <div id="main-footer">
+            <div id="first-footer-column">footer prima colonna</div>
+            <div id="second-footer-column">footer seconda colonna</div>
+            <div id="third-footer-column" style="border: none">footer terza colonna</div>
+        </div>
+        <div id="second-footer">footer secondario</div>
+    </div>
+</div>
 </body>
 </html>
