--- a/web/progettazione/nav.html
+++ b/web/progettazione/nav.html
@@ -3,12 +3,11 @@
 <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
-    <title>B&B La Vecchia Posta | Gabbia Logica</title>
+    <title>B&B La Vecchia Posta | Navigazione</title>
 </head>
 <body>
 <div id="wrapper-content">
     <div id="socialBar">
-
         <div id="left-social-bar"><span class="logo-social">a</span>
             <span class="logo-social">b</span>
             <span class="logo-social">c</span>
@@ -34,20 +33,24 @@
             </span>
         </div>
     </div>
-    <div id="menuBar">
-        <div><ul id="main">
-            <li>home</li>
-            <li><a href="gabbiaLogicaCamere.html">camere</a></li>
-            <li>attività</li>
-            <li>eventi</li>
-            <li>dintorni</li>
-            <li>dove siamo</li>
-        </ul>
-        <ul id="contact">
-            <li>contatti veloci</li>
-            <li>telono ed email</li>
-        </ul></div>
-    </div>
+    <nav>
+        <div id="menuBar">
+            <div>
+                <ul id="main">
+                <li><a href="nav.html">home</a></li>
+                <li><a href="navCamere.html">camere</a></li>
+                <li><a href="navArrivita.html">attività</a></li>
+                <li><a href="navEventi.html">eventi</a></li>
+                <li><a href="navDitorni.html">dintorni</a></li>
+                <li><a href="navCamere.html">dove siamo</a></li>
+            </ul>
+            <ul id="contact">
+                <li>0862/xxxxx</li>
+                <li>info@xxxx</li>
+            </ul>
+            </div>
+        </div>
+    </nav>
     <div id="wrapper-slider">
         <div id="slider">qui le foto</div>
         <div id="booknow">scorciatoia per la prenotazione</div>
@@ -75,15 +78,16 @@
             </div>
             <div id="second-footer-column">
                 Sitemap
-                <ul>
-                    <li>Home</li>
-                    <li>Camere</li>
-                    <li>Eventi</li>
-                    <li>Attività</li>
-                    <li>Dintorni</li>
-                    <li>Dove Siamo</li>
-                    <li>Prenota</li>
-                </ul>
+                <nav>
+                    <ul>
+                        <li><a href="nav.html">home</a></li>
+                        <li><a href="navCamere.html">camere</a></li>
+                        <li><a href="navAttivita.html">attività</a></li>
+                        <li><a href="navEventi.html">eventi</a></li>
+                        <li><a href="navDitorni.html">dintorni</a></li>
+                        <li><a href="navDoveSiamo.html">dove siamo</a></li>
+                    </ul>
+                </nav>
             </div>
             <div id="third-footer-column" style="border: none">
                 Si pensa di inserire un collegamento ad un servizio esterno
