--- a/web/progettazione/navCamera.html
+++ b/web/progettazione/navCamera.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <!--Title-->
-    <title>B&B La Vecchia Posta | Gabbia Logica</title>
+    <title>B&B La Vecchia Posta | Navigazione</title>
 
     <!--Stylesheets-->
     <link rel="stylesheet" href="style.css" type="text/css" media="all">
@@ -61,20 +61,24 @@
             </span>
         </div>
     </div>
-    <div id="menuBar">
-        <div><ul id="main">
-            <li><a href="gabbiaLogica.html">home</a></li>
-            <li><a href="gabbiaLogicaCamere.html">camere</a></li>
-            <li>attività</li>
-            <li>eventi</li>
-            <li>dintorni</li>
-            <li>dove siamo</li>
-        </ul>
-            <ul id="contact">
-                <li>contatti veloci</li>
-                <li>telono ed email</li>
-            </ul></div>
-    </div>
+    <nav>
+        <div id="menuBar">
+            <div>
+                <ul id="main">
+                    <li><a href="nav.html">home</a></li>
+                    <li><a href="navCamere.html">camere</a></li>
+                    <li><a href="navAttivita.html">attività</a></li>
+                    <li><a href="navEventi.html">eventi</a></li>
+                    <li><a href="navDitorni.html">dintorni</a></li>
+                    <li><a href="navCamere.html">dove siamo</a></li>
+                </ul>
+                <ul id="contact">
+                    <li>0862/xxxxx</li>
+                    <li>info@xxxx</li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <!-- END #navigation -->
 
@@ -186,15 +190,16 @@
             </div>
             <div id="second-footer-column">
                 Sitemap
-                <ul>
-                    <li>Home</li>
-                    <li>Camere</li>
-                    <li>Eventi</li>
-                    <li>Attività</li>
-                    <li>Dintorni</li>
-                    <li>Dove Siamo</li>
-                    <li>Prenota</li>
-                </ul>
+                <nav>
+                    <ul>
+                        <li><a href="nav.html">home</a></li>
+                        <li><a href="navCamere.html">camere</a></li>
+                        <li><a href="navAttivita.html">attività</a></li>
+                        <li><a href="navEventi.html">eventi</a></li>
+                        <li><a href="navDitorni.html">dintorni</a></li>
+                        <li><a href="navDoveSiamo.html">dove siamo</a></li>
+                    </ul>
+                </nav>
             </div>
             <div id="third-footer-column" style="border: none">
                 Si pensa di inserire un collegamento ad un servizio esterno
