--- a/web/progettazione/navCamere.html
+++ b/web/progettazione/navCamere.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <!--Title-->
-    <title>B&B La Vecchia Posta | Gabbia Logica</title>
+    <title>B&B La Vecchia Posta | Navigazione</title>
 
     <!--Stylesheets-->
     <link rel="stylesheet" href="reset.css" type="text/css" media="all">
@@ -42,7 +42,7 @@
             <span class="logo-social">d</span>
             <span class="logo-social">e</span>
         </div>
-        <span id="marker-map">marker</span>
+        <span id="marker-map" >marker</span>
         <div id="right-social-bar">
             <span id="btn-prenota">prenota</span>
             <span id="upperText">A</span>
@@ -63,20 +63,24 @@
             </span>
         </div>
     </div>
-    <div id="menuBar">
-        <div><ul id="main">
-            <li><a href="gabbiaLogica.html">home</a></li>
-            <li><a href="gabbiaLogicaCamere.html">camere</a></li>
-            <li>attività</li>
-            <li>eventi</li>
-            <li>dintorni</li>
-            <li>dove siamo</li>
-        </ul>
-            <ul id="contact">
-                <li>contatti veloci</li>
-                <li>telono ed email</li>
-            </ul></div>
-    </div>
+    <nav>
+        <div id="menuBar">
+            <div>
+                <ul id="main">
+                    <li><a href="nav.html">home</a></li>
+                    <li><a href="navCamere.html">camere</a></li>
+                    <li><a href="navAttivita.html">attività</a></li>
+                    <li><a href="navEventi.html">eventi</a></li>
+                    <li><a href="navDitorni.html">dintorni</a></li>
+                    <li><a href="navCamere.html">dove siamo</a></li>
+                </ul>
+                <ul id="contact">
+                    <li>0862/xxxxx</li>
+                    <li>info@xxxx</li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 <!-- BEGIN .page-header -->
 <div class="page-header">
@@ -93,19 +97,19 @@
     <div class="section clearfix">
         <div class="twoColumns">
             <div class="one-third-full">
-                <p></p><div class="block-img1"><a href="gabbiaLogicaCamera.html">
+                <p></p><div class="block-img1"><a href="navCamera.html">
                 <img src="images/image4.png" alt="Immagine copertina per la camera"></a></div><p></p>
-                <h3 class="title1"><a href="gabbiaLogicaCamera.html">Singola</a><span class="title-end"></span></h3>
+                <h3 class="title1"><a href="navCamera.html">Singola</a><span class="title-end"></span></h3>
                 <p>testo di presentazione per la camera limitato in numero di caratteri</p>
-                <p><a href="gabbiaLogicaCamera.html" class="button2">Maggiori informazioni »</a></p>
+                <p><a href="navCamera.html" class="button2">Maggiori informazioni »</a></p>
             </div>
 
             <div class="one-third-full featured-wrapper" style="border:none">
-                <p></p><div class="block-img1"><a href="gabbiaLogicaCamera.html">
+                <p></p><div class="block-img1"><a href="navCamera.html">
                 <img src="images/image4.png" alt="Immagine copertina per la camera"></a></div><p></p>
-                <h3 class="title1"><a href="gabbiaLogicaCamera.html">Doppia</a><span class="title-end"></span></h3>
+                <h3 class="title1"><a href="navCamera.html">Doppia</a><span class="title-end"></span></h3>
                 <p>testo di presentazione per la camera limitato in numero di caratteri</p>
-                <p><a href="gabbiaLogicaCamera.html" class="button2">Maggiori informazioni »</a></p>
+                <p><a href="navCamera.html" class="button2">Maggiori informazioni »</a></p>
                 <div class="featured-bottom"></div>
             </div>
         </div>
@@ -113,18 +117,18 @@
         <div class="twoColumns">
             <div class="one-third-full">
                 <p></p>
-                <div class="block-img1"><a href="gabbiaLogicaCamera.html">
+                <div class="block-img1"><a href="navCamera.html">
                 <img src="images/image4.png" alt="Immagine copertina per la camera"></a></div><p></p>
-                <h3 class="title1"><a href="gabbiaLogicaCamera.html">Tripla</a><span class="title-end"></span></h3>
+                <h3 class="title1"><a href="navCamera.html">Tripla</a><span class="title-end"></span></h3>
                 <p>testo di presentazione per la camera limitato in numero di caratteri</p>
-                <p><a href="gabbiaLogicaCamera.html" class="button2">Maggiori informazioni »</a></p>
+                <p><a href="navCamera.html" class="button2">Maggiori informazioni »</a></p>
             </div>
             <div class="one-third-full" style="border:none">
-                <p></p><div class="block-img1"><a href="gabbiaLogicaCamera.html">
+                <p></p><div class="block-img1"><a href="navCamera.html">
                 <img src="images/image4.png" alt="Immagine copertina per la camera"></a></div><p></p>
-                <h3 class="title1"><a href="gabbiaLogicaCamera.html">Quadrupla</a><span class="title-end"></span></h3>
+                <h3 class="title1"><a href="navCamera.html">Quadrupla</a><span class="title-end"></span></h3>
                 <p>testo di presentazione per la camera limitato in numero di caratteri</p>
-                <p><a href="gabbiaLogicaCamera.html" class="button2">Maggiori informazioni »</a></p>
+                <p><a href="navCamera.html" class="button2">Maggiori informazioni »</a></p>
             </div>
         </div>
         <!-- END .section -->
@@ -143,15 +147,16 @@
         </div>
         <div id="second-footer-column">
             Sitemap
-            <ul>
-                <li>Home</li>
-                <li>Camere</li>
-                <li>Eventi</li>
-                <li>Attività</li>
-                <li>Dintorni</li>
-                <li>Dove Siamo</li>
-                <li>Prenota</li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="nav.html">home</a></li>
+                    <li><a href="navCamere.html">camere</a></li>
+                    <li><a href="navAttivita.html">attività</a></li>
+                    <li><a href="navEventi.html">eventi</a></li>
+                    <li><a href="navDitorni.html">dintorni</a></li>
+                    <li><a href="navDoveSiamo.html">dove siamo</a></li>
+                </ul>
+            </nav>
         </div>
         <div id="third-footer-column" style="border: none">
             Si pensa di inserire un collegamento ad un servizio esterno
