--- a/web/skins/system/dtml/it/widget/TextField.html
+++ b/web/skins/system/dtml/it/widget/TextField.html
@@ -3,7 +3,7 @@
 <h6 class="inl_blk ml20">{$mandatory}</h6>
 <div class="clear">&nbsp;</div-->
 
-<fieldset class="fifty-percent"> <!-- to make two field float next to one another, adjust values accordingly -->
+<fieldset> <!-- to make two field float next to one another, adjust values accordingly -->
     <label>{$label}</label>
     <input id="{$id}" type="{$type}" name="{$name}" value="{$value}" style="width:92%;"/>
 </fieldset>
