dump e backend fix

--- a/web/skins/system/dtml/it/frame-private.html
+++ b/web/skins/system/dtml/it/frame-private.html
@@ -14,8 +14,7 @@
 			<!-- BAR MENU -->
 				{$sitemap}
             {$menu}
-            <section id="main" class="column" style="height: 1708px;">
-
+            <section id="main" class="column">
 				{$body}
             </section>
 				{$footer}
