--- a/web/skins/system/dtml/it/menu_admin.html
+++ b/web/skins/system/dtml/it/menu_admin.html
@@ -1,4 +1,4 @@
-<aside id="sidebar" class="column" style="height: 1708px;">
+<aside id="sidebar" class="column">
     {literal}<form class="quick_search">
         <input type="text" value="Quick Search" onfocus="if(!this._haschanged){this.value=''};this._haschanged=true;">
     </form>  {/literal}
