--- a/web/skins/theme/dtml/it/header.html
+++ b/web/skins/theme/dtml/it/header.html
@@ -45,7 +45,8 @@
 <!-- BEGIN .title-wrapper -->
 <div id="title-wrapper">
     <div id="logo">
-        <a href="index.html"><img src="\skins\theme\img\logo.png"></a>
+        <a href="index.html">
+            <img src="\skins\theme\img\logo.png"></a>
     </div>
     <div id="last-offert">ultima offerta</div>
     <!-- END .title-wrapper -->
