--- a/web/skins/system/dtml/it/frame-private-head.html
+++ b/web/skins/system/dtml/it/frame-private-head.html
@@ -8,51 +8,12 @@
 	<!-- Mobile Specific Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	
-	<!--[if lt IE 9]>
-        <link rel="stylesheet" type="text/css" media="screen" href="css/sequencejs-theme.sliding-horizontal-parallax-ie.css" />
-    <![endif]-->
-	<!--link rel="stylesheet" type="text/css" media="screen" href="skins/system/css/cssDISIM/flexslider.css" />
-	<link rel="stylesheet" type="text/css" media="screen" charset="utf-8" href="skins/system/css/cssDISIM/prettyPhoto.css"  />
-	<link rel="stylesheet" href="skins/system/css/cssDISIM/carousel.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="skins/system/css/cssDISIM/select2.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="skins/system/css/cssDISIM/datepick.css" media="screen" type="text/css" />
-	<link rel="stylesheet" href="skins/system/css/cssDISIM/researchwareStyle.css" media="screen" type="text/css" /-->
-	
-	<!-- JS  -->
-	<!--script type="text/javascript" src="skins/system/js/jqueryUi/jquery-1.9.1.js"></script>
-	<script type="text/javascript" src="skins/system/js/jqueryUi/jquery-ui-1.10.1.custom.min.js"></script>
-	<script type="text/javascript" src="skins/system/js/jqueryUi/jquery.ui.core.min.js"></script>
-	<script type="text/javascript" src="skins/system/js/jqueryUi/jquery.ui.widget.min.js"></script>
-	<script type="text/javascript" src="skins/system/js/jqueryUi/jquery.ui.accordion.min.js"></script>    
-	<script type="text/javascript" src="skins/system/js/jquery.easing.1.3.js"></script>
-	<!--[if lt IE 9]>
-        <!--script type="text/javascript" src="include/html5shiv.js"></script>
-    <![endif]-->
-	<!--script type="text/javascript" src="skins/system/js/css3-mediaqueries.js"></script>
-	<script type="text/javascript" src="skins/system/js/common.js"></script>
-	<!-- <script src="skins/system/js/jqueryUi/jquery-ui-1.10.1.custom.min.js"></script> -->
-	<!--script type="text/javascript" src="skins/system/js/site_common.js"></script>
-	<!-- nella realta' questi script vengono caricati dinamicamente solo dalle pagine che ne hanno bisogno -->
-	<!--script type="text/javascript" src="skins/system/js/sequence.jquery-min.js"></script>
-	<script type="text/javascript" src="skins/system/js/jquery.quicksand.js"></script>
-	<script type="text/javascript" src="skins/system/js/jquery.flexslider-min.js"></script>
-	<script type="text/javascript" src="skins/system/js/jquery.prettyPhoto.js"></script>
-	<script type="text/javascript" src="skins/system/js/jquery.jcarousel.min.js"></script>
-	<script type="text/javascript" src="skins/system/js/jquery.tipsy.js"></script>
-	<script type="text/javascript" src="skins/system/js/select2.min.js"></script>
-	<!-- <script type="text/javascript" src="skins/system/js/blockMenu.js"></script> -->
-	<!--script type="text/javascript" src="skins/system/js/accordion_menu.js"></script>
-	<!-- Favicons -->
-	<!--link rel="shortcut icon" href="favicon.png" type="image/png" />
-
-    <!-- new head theme -->
-
     <link rel="stylesheet" type="text/css" href="skins/system/css/layout.css"/>
 
-    <script src="skins/system/js/jquery-1.5.2.min.js" type="text/javascript"></script>
-    <script src="skins/system/js/hideshow.js" type="text/javascript"></script>
-    <script src="skins/system/js/jquery.tablesorter.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="skins/system/js/jquery.equalHeight.js"></script>
+    <script src="skins/system/js_new/jquery-1.5.2.min.js" type="text/javascript"></script>
+    <script src="skins/system/js_new/hideshow.js" type="text/javascript"></script>
+    <script src="skins/system/js_new/jquery.tablesorter.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="skins/system/js_new/jquery.equalHeight.js"></script>
     <script type="text/javascript">
         $(document).ready(function()
                 {
@@ -86,4 +47,4 @@
         });
     </script>
 
-</head>			
+</head>
