--- a/web/skins/system/dtml/it/frame-private.html
+++ b/web/skins/system/dtml/it/frame-private.html
@@ -12,12 +12,12 @@
 		<div class="container">
 				{$header}
 			<!-- BAR MENU -->
-				{$sitemap}
-            {$menu}
+            <aside id="sidebar" class="column">
+                {$menu}
+            </aside>
             <section id="main" class="column">
 				{$body}
             </section>
-				{$footer}
 		</div>
 	</div>
 </body>
