--- a/web/skins/system/dtml/it/report/sys_image_report.html
+++ b/web/skins/system/dtml/it/report/sys_image_report.html
@@ -30,8 +30,8 @@
                     <td>{$instance->owner->username}</td>
                     <td>{$instance->size}</td>
                     <td>
-                        <input type="image" src="skins/system/images/icn_edit.png" title="Modifica">
-                        <input type="image" src="skins/system/images/icn_trash.png" title="Rimuovi">
+                        <a href="{$service_link}?action=emit&preload=1&value={$instance->id}" title="Modifica"><img src="skins/system/images/icn_edit.png" alt="modifica elemento"/> </a>
+                        <a href="{$service_link}?action=delete&value={$instance->username}" title="Rimuovi"><img src="skins/system/images/icn_trash.png" alt="elimina elemento"/> </a>
                     </td>
                 </tr>
                 {/foreach}
