--- a/web/skins/system/dtml/it/report/sys_service_report.html
+++ b/web/skins/system/dtml/it/report/sys_service_report.html
@@ -26,12 +26,12 @@
                 {foreach from=$instances item=instance}
                 <tr>
                     <td><input type="checkbox"></td>
-                    <td>{$instance->entry}</td>
-                    <td>{$instance->script}</td>
-                    <td>{$instance->name}</td>
+                    <td class="text_uppercase">{$instance->entry}</td>
+                    <td class="text_uppercase">{$instance->script}</td>
+                    <td class="text_uppercase">{$instance->name}</td>
                     <td>
-                        <input type="image" src="skins/system/images/icn_edit.png" title="Modifica">
-                        <input type="image" src="skins/system/images/icn_trash.png" title="Rimuovi">
+                        <a href="{$service_link}?action=emit&preload=1&value={$instance->id}" title="Modifica"><img src="skins/system/images/icn_edit.png" alt="modifica elemento"/> </a>
+                        <a href="{$service_link}?action=delete&value={$instance->username}" title="Rimuovi"><img src="skins/system/images/icn_trash.png" alt="elimina elemento"/> </a>
                     </td>
                 </tr>
                 {/foreach}
