--- a/web/skins/system/dtml/it/widget/CheckBox.html
+++ b/web/skins/system/dtml/it/widget/CheckBox.html
@@ -1,3 +1,4 @@
+<!-- check box widget-->
 <input class="mb20" id="input_{$name}" type="hidden" name="{$name}" value="{$value}" />
 <span class="flt_lft line_height30 w230 right_align mr20">&nbsp;</span>
 <div id="ck-button">
