--- a/web/skins/system/dtml/it/admin.html
+++ b/web/skins/system/dtml/it/admin.html
@@ -1,17 +1,22 @@
 
-<form class="" action="login.php" method="POST">
-	<div class="">
-		<label class="flt_lft line_height30 w230 right_align mr20">username </label>
-		<input class="w220" type="text" name="username" />
-	</div>
-	<div class="clear">&nbsp;</div>
-	<div class="mt20">
-		<label class="flt_lft line_height30 w230 right_align mr20">password</label>
-		<input class="w220" type="password" name="password" />
-	</div>
-	<div class="clear">&nbsp;</div>
-	<div class="mt20">
-		<label class="flt_lft line_height30 w230 right_align mr20">&nbsp;</label>
-		<input class=" mb20" type="submit" value="login" />
-	</div>
-</form>
+<div id="form-login">
+    <h1 class="bc-logo"></h1>
+    <form class="" action="login.php" method="post">
+        <div class="">
+            <label class="">username </label>
+            <input class="" type="text" name="username" />
+        </div>
+        <div class="clear">&nbsp;</div>
+        <div class="mt20">
+            <label class="">password</label>
+            <input class="" type="password" name="password" />
+        </div>
+        <div class="">&nbsp;</div>
+        <div class="closing">
+            <label class="">&nbsp;</label>
+            <input class="" type="submit" value="login" />
+            <input class="" type="reset" value="reset" />
+        </div>
+    </form>
+</div>
+
