--- a/web/skins/system/dtml/it/header.html
+++ b/web/skins/system/dtml/it/header.html
@@ -6,8 +6,12 @@
 </header> <!-- end of header bar -->
 <section id="secondary_bar">
     <div class="user">
-        <p>{$instance->username} (<a href="#">3 Messages</a>)</p>
-        <!-- <a class="logout_user" href="#" title="Logout">Logout</a> -->
+        {if $instance->username != null}
+            <p>{$instance->username} (<a href="#">3 Messages</a>)</p>
+            <a class="logout_user" href="#" title="Logout">Logout</a>
+        {else}
+            <p></p>
+        {/if}
     </div>
     <div class="breadcrumbs_container">
         <article class="breadcrumbs"><a href="index.html">Website Admin</a> <div class="breadcrumb_divider"></div> <a class="current">Dashboard</a></article>
