--- a/web/skins/system/dtml/it/report/slider_report.html
+++ b/web/skins/system/dtml/it/report/slider_report.html
@@ -2,12 +2,10 @@
     <header><h3 class="tabs_involved">Content Manager</h3>
         <ul class="tabs">
             <li class="active"><a href="#tab1">Service</a></li>
-            <li>
-                <a href="{$service_link}?action=emit">
-                    <img class="add_entities" src="skins/system/images/icn_plus.png" title="Aggiungi"/>
-                </a>
-            </li>
         </ul>
+        <a href="{$service_link}?action=emit">
+            <img class="add_entities" src="skins/system/images/icn_plus.png" title="Aggiungi"/>
+        </a>
     </header>
     {if $instances != null || $instance != null}
     <div class="tab_container">
@@ -28,8 +26,8 @@
                     <td>{$instance->titolo}</td>
                     <td>{$instance->effetto}</td>
                     <td>
-                        <input type="image" src="skins/system/images/icn_edit.png" title="Modifica">
-                        <input type="image" src="skins/system/images/icn_trash.png" title="Rimuovi">
+                        <a href="emit&preload=1&value={$instance->id}" title="Modifica"><img src="skins/system/images/icn_edit.png" alt="modifica elemento"/> </a>
+                        <a href="{$service_link}?action=delete&value={$instance->id}" title="Rimuovi"><img src="skins/system/images/icn_trash.png" alt="elimina elemento"/> </a>
                     </td>
                 </tr>
                 {/foreach}
