--- a/web/skins/system/dtml/it/report/sys_servicecategory_report.html
+++ b/web/skins/system/dtml/it/report/sys_servicecategory_report.html
@@ -26,8 +26,8 @@
                     <td><input type="checkbox"></td>
                     <td>{$instance->name}</td>
                     <td>
-                        <input type="image" src="skins/system/images/icn_edit.png" title="Modifica">
-                        <input type="image" src="skins/system/images/icn_trash.png" title="Rimuovi">
+                        <a href="emit&preload=1&value={$instance->id}" title="Modifica"><img src="skins/system/images/icn_edit.png" alt="modifica elemento"/> </a>
+                        <a href="{$service_link}?action=delete&value={$instance->id}" title="Rimuovi"><img src="skins/system/images/icn_trash.png" alt="elimina elemento"/> </a>
                     </td>
                 </tr>
                 {/foreach}
