--- a/web/skins/system/dtml/it/widget/EditorField.html
+++ b/web/skins/system/dtml/it/widget/EditorField.html
@@ -1,12 +1,8 @@
-<!--label class="flt_lft line_height16 w230 right_align mr20 vert-middle">{$label}</label>
-<textarea class="tinymce mb20" id="{$name}" name="{$name}" cols="{$cols}" rows="{$rows}">{$value}</textarea>
-<div class="clear">&nbsp;</div-->
-
-<fieldset class="fifty-percent">
+<!--editor field widget -->
+<fieldset>
     <label>{$label}</label>
-    <textarea class="tinymces" id="{$name}" name="{$name}" cols="{$cols}" rows="{$rows}">{$value}</textarea>
+    <textarea class="tinymce" id="{$name}" name="{$name}" cols="{$cols}" rows="{$rows}">{$value}</textarea>
 </fieldset>
-
 
 <script type="text/javascript" src="skins/system/js/tiny_mce/jquery.tinymce.js"></script>
 <script type="text/javascript">
