--- a/web/skins/system/dtml/it/widget/SelectFromReference.html
+++ b/web/skins/system/dtml/it/widget/SelectFromReference.html
@@ -1,4 +1,7 @@
-<label class="flt_lft line_height30 w230 right_align mr20" for="{$name}"> {$label} </label>
-<select class="ptotal4 w230" id="{$name}" name="{$name}" >
-	{$options}
-</select>
+<!-- select from reference widget -->
+<fieldset>
+    <label class="" for="{$name}"> {$label} </label>
+    <select class="" id="{$name}" name="{$name}" >
+        {$options}
+    </select>
+</fieldset>
