--- a/web/skins/system/dtml/it/widget/TextField.html
+++ b/web/skins/system/dtml/it/widget/TextField.html
@@ -1,9 +1,5 @@
-<!--<label class="flt_lft line_height30 w230 right_align mr20" for="{$name}">{$label}</label>
-<input class="w220" id="{$id}" type="{$type}" name="{$name}" value="{$value}" />
-<h6 class="inl_blk ml20">{$mandatory}</h6>
-<div class="clear">&nbsp;</div-->
-
-<fieldset> <!-- to make two field float next to one another, adjust values accordingly -->
+<!-- text field widget-->
+<fieldset>
     <label>{$label}</label>
     <input id="{$id}" type="{$type}" name="{$name}" value="{$value}" style="width:92%;"/>
 </fieldset>
