--- a/web/skins/system/dtml/it/widget/EditorField.html
+++ b/web/skins/system/dtml/it/widget/EditorField.html
@@ -3,11 +3,10 @@
     <label>{$label}</label>
     <textarea class="tinymce" id="{$name}" name="{$name}" cols="{$cols}" rows="{$rows}">{$value}</textarea>
 </fieldset>
-
 <script type="text/javascript" src="skins/system/js/tiny_mce/jquery.tinymce.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
-	$('textarea.tinymce').tinymce({
+	$('textarea#{$name}').tinymce({
 		// Location of TinyMCE script
 		script_url : 'skins/system/js/tiny_mce/tiny_mce.js',
 
