--- a/web/skins/theme/dtml/it/frame-public-head.html
+++ b/web/skins/theme/dtml/it/frame-public-head.html
@@ -32,6 +32,9 @@
     <script type="text/javascript" src="skins/theme/js/slides.min.jquery.js"></script>
     <script type="text/javascript" src="skins/theme/js/scripts.js"></script>
 
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyD4z-CRyQSat_S0NveE5efiG9aQ1UjuhkU&sensor=false"></script>
+    <script type="text/javascript" src="js/jquery.gmap.min.js"></script>
+
     <!--[if (gte IE 6)&(lte IE 8)]>
     <script type="text/javascript" src="skins/theme/js/selectivizr-min.js"></script>
     <![endif]-->
