--- a/web/skins/theme/dtml/it/multiple/vp_room_multiple.html
+++ b/web/skins/theme/dtml/it/multiple/vp_room_multiple.html
@@ -1,6 +1,6 @@
 <!-- BEGIN .page-header -->
 <div class="page-header">
-    <img src="../../img/page-head.png" alt="" />
+    <img class="page-header-img" src="skins/theme/img/beb/camere.jpg" alt="" />
     <!-- END .page-header -->
 </div>
 
@@ -13,21 +13,28 @@
     <div class="section clearfix">
         {foreach from=$instances item=room}
             <div class="fourty-five">
-                <p><div class="block-img1"><a href="accommodation-single.html"><img src="../../img/image4.png" alt="" /></a></div></p>
-                <h3 class="title1"><a href="accommodation-single.html">{$room->nome}</a><span class="title-end"></span></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ac tortor at tellus feugiat congue quis ut nunc.</p>
-                <p><a href="vp_room_id={$room->id}" class="button2">Maggiori informazioni &raquo;</a></p>
+                <p>
+                    <div class="block-img1">
+                        <a href="camere.php?vp_room_id={$room->id}">
+                            <img src="skins/theme/img/beb/camera-singola.jpg" alt="" />
+                        </a>
+                    </div>
+                </p>
+                <h3 class="title1">
+                    <a href="camere.php?vp_room_id={$room->id}">
+                        {$room->nome}
+                    </a>
+                    <span class="title-end"></span>
+                </h3>
+                <div class="camere-desc-wrapper">
+                    {$room->descrizione|truncate:300:"...":true}
+                </div>
+                <p>
+                    <a href="camere.php?vp_room_id={$room->id}" class="button2">Maggiori informazioni &raquo;</a>
+                </p>
             </div>
         {/foreach}
         <!-- END .section -->
     </div>
-    <hr>
-    <div class="page-pagination page-pagination-full">
-        <p class="clearfix">
-            <span class="fl"><a href="#">&larr; Previous</a></span>
-            <span class="fr"><a href="#">Next &rarr;</a></span>
-        </p>
-    </div>
-
-    <!-- END .section -->
+       <!-- END .section -->
 </div>
