--- a/web/skins/theme/dtml/it/single/vp_eventi_single.html
+++ b/web/skins/theme/dtml/it/single/vp_eventi_single.html
@@ -2,7 +2,7 @@
 <!--ITALIANO-->
 <!-- BEGIN .page-header -->
 <div class="page-header">
-    <img src="../../img/page-head.png" alt="" />
+    <img class="page-header-img" src="skins/theme/img/beb/eventi.jpg" alt="" />
     <!-- END .page-header -->
 </div>
 <!-- BEGIN .section -->
@@ -35,45 +35,29 @@
             <div class="one-half last-col">
                 <h3 class="title1">Attivit&agrave; consigliata<span class="title-end"></span></h3>
                 <div class="clearfix">
-                    <div class="one-third">
-                        <ul class="list3">
-                            {foreach from=$instance->vp_room_vp_servizi item=servizi}
-                            <li>{$servizi->id_vp_servizi->nome}</li>
-                            {/foreach}
-                        </ul>
+                    <div class="one-third servizi-wrapper">
+                        {$eventi_instance->suggest}
                     </div>
                 </div>
-                <div class="booknow-sidebar">
-
-                    <!-- BEGIN .booknow -->
-                    <div class="booknow my-booknow">
-
-                        <form class="booking-form" name="bookroom" action="booking.php" method="post">
-
-                            <div class="select-wrapper">
-                                <select id="room" name="id_room">
-                                    <option omitted>Seleziona una camera</option>
-                                    {foreach from=$room_instances item=camera}
-                                    <option value="{$camera->id}">{$camera->nome}</option>
-                                    {/foreach}
-                                </select>
-                            </div>
-
-                            <div class="clearfix">
-                                <input type="text" id="datefrom" name="from" placeholder="from" class="input-half datepicker">
-                                <input type="text" id="dateto" name="to" placeholder="to" class="input-half input-half-last datepicker">
-                            </div>
-
-                            <input class="bookbutton" type="submit" value="Book Now">
-
-                        </form>
-
-                        <div class="corner-left"></div>
-
-                        <!-- END .booknow -->
+                <div class="booknow-accompage">
+                    <div class="book-price">
+                        <h2 class="price"><span class="cheap-price-detail">a partire da</span>&euro; 30</h2>
                     </div>
-
-                    <!-- END . booknow-sidebar -->
+                    <form class="booking-form booking-form-accompage" name="bookroom" action="booking.php" method="post">
+                        <div class="select-wrapper">
+                            <select id="room" name="id_room">
+                                <option>Prenota una camera</option>
+                                {foreach from=$room_instances item=room}
+                                <option value="{$room->id}">{$room->nome}</option>
+                                {/foreach}
+                            </select>
+                        </div>
+                        <div class="clearfix">
+                            <input type="text" id="datefrom" value="From" class="input-half datepicker">
+                            <input type="text" id="dateto" value="To" class="input-half input-half-last datepicker">
+                        </div>
+                        <input class="bookbutton" type="submit" value="Prenota" />
+                    </form>
                 </div>
             </div>
         </div>
